Changes: - dark mode fixed ScrollToTopHomepage

--- a/src/App.css
+++ b/src/App.css
@@ -182,8 +182,18 @@ img {
 + DarkMode
 */
 
+.dark-mode {
+    /*background-color: #11052C;*/
+    /*background-color: #0A1931;*/
+    color: var(--light_grey);
+
+    background: #0C1E3A;
+    background: -webkit-linear-gradient(top left, #0C1E3A, #360D4B);
+    background: -moz-linear-gradient(top left, #0C1E3A, #360D4B);
+    background: linear-gradient(to bottom right, #0C1E3A, #360D4B);
+}
+
 .DarkMode {
-    background-color: lightcoral;
     position: relative;
     width: 100%;
 }
@@ -615,7 +625,7 @@ button {
 }
 
 .ScrollToTopHomepage {
-    background-color: var(--white);
+    /*background-color: var(--white);*/
     cursor: pointer;
     width: 100%;
 }
@@ -625,6 +635,10 @@ button {
     display: flex;
     height: 100px;
     justify-content: space-between;
+}
+
+.ScrollToTopHomepage_dark .main {
+    background: #360D4B;
 }
 
 .ScrollToTopHomepage .arrow {
@@ -637,12 +651,28 @@ button {
     width: 100px;
 }
 
+.ScrollToTopHomepage_dark .arrow {
+    /*background: #0C1E3A;*/
+    /*background: -webkit-linear-gradient(top left, #0C1E3A, #360D4B);*/
+    /*background: -moz-linear-gradient(top left, #0C1E3A, #360D4B);*/
+    /*background: linear-gradient(to bottom right, #0C1E3A, #360D4B);*/
+    background: #360D4B;
+}
+
 .ScrollToTopHomepage .arrow::before {
     align-items: center;
     content: url(./img/arrow-up.svg);
     color: var(--white);
     display: flex;
     width: 100%;
+}
+
+.ScrollToTopHomepage_dark .arrow::before {
+    background: #360D4B;
+    /*background: #0C1E3A;*/
+    /*background: -webkit-linear-gradient(top left, #0C1E3A, #360D4B);*/
+    /*background: -moz-linear-gradient(top left, #0C1E3A, #360D4B);*/
+    /*background: linear-gradient(to bottom right, #0C1E3A, #360D4B);*/
 }
 
 .ScrollToTopHomepage .arrow::after {
@@ -655,6 +685,14 @@ button {
     left: -50%;
     position: absolute;
     width: 200%;
+}
+
+.ScrollToTopHomepage_dark .arrow::after {
+    background: #360D4B;
+    /*background: #0C1E3A;*/
+    /*background: -webkit-linear-gradient(top left, #0C1E3A, #360D4B);*/
+    /*background: -moz-linear-gradient(top left, #0C1E3A, #360D4B);*/
+    /*background: linear-gradient(to bottom right, #0C1E3A, #360D4B);*/
 }
 
 .ScrollToTopHomepage p {
@@ -677,6 +715,14 @@ button {
     width: 250px;
 }
 
+.ScrollToTopHomepage_dark p::before {
+    background: #360D4B;
+    /*background: #0C1E3A;*/
+    /*background: -webkit-linear-gradient(top left, #0C1E3A, #360D4B);*/
+    /*background: -moz-linear-gradient(top left, #0C1E3A, #360D4B);*/
+    /*background: linear-gradient(to bottom right, #0C1E3A, #360D4B);*/
+}
+
 
 
 /*
@@ -691,7 +737,7 @@ button {
 
 .card {
     align-items: center;
-    background-color: var(--white);
+    /*background-color: var(--white);*/
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -1458,11 +1504,6 @@ button {
     100% {
         transform: translateX(300%);
     }
-}
-
-
-.dark-mode {
-    background-color: red !important;
 }
 
 
